// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Header with title prop 1`] = `
<header
  className="header"
>
  <div
    className="header__logo-container"
  >
    <Link
      replace={false}
      to="/"
    >
      <img
        alt="logo"
        className="header__logo"
        src="test-file-stub"
      />
    </Link>
  </div>
  <h1
    className="header__title"
  >
    Moscow, Russia
  </h1>
  <nav>
    <ul
      className="header__menu-container"
    >
      <li
        className="header__menu-item"
      >
        <Link
          className="header__menu-link"
          replace={false}
          to="/help"
        >
          Help
        </Link>
      </li>
      <li
        className="header__menu-item"
      >
        <button
          className="header__menu-button"
          onClick={[Function]}
        >
          Signin
        </button>
      </li>
      <li
        className="header__menu-item"
      >
        <button
          className="header__menu-button"
          onClick={[Function]}
        >
          Signup
        </button>
      </li>
    </ul>
  </nav>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="header__modal"
    closeTimeoutMS={0}
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName="header__modal-overlay"
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <div
      className="header__close-button-container"
    >
      <button
        className="header__close-button"
        onClick={[Function]}
      >
        ✕
      </button>
    </div>
    <Signup />
  </Modal>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="header__modal"
    closeTimeoutMS={0}
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName="header__modal-overlay"
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <div
      className="header__close-button-container"
    >
      <button
        className="header__close-button"
        onClick={[Function]}
      >
        ✕
      </button>
    </div>
    <Signin />
  </Modal>
</header>
`;

exports[`should render Header without title prop 1`] = `
<header
  className="header"
>
  <div
    className="header__logo-container"
  >
    <Link
      replace={false}
      to="/"
    >
      <img
        alt="logo"
        className="header__logo"
        src="test-file-stub"
      />
    </Link>
  </div>
  <nav>
    <ul
      className="header__menu-container"
    >
      <li
        className="header__menu-item"
      >
        <Link
          className="header__menu-link"
          replace={false}
          to="/help"
        >
          Help
        </Link>
      </li>
      <li
        className="header__menu-item"
      >
        <button
          className="header__menu-button"
          onClick={[Function]}
        >
          Signin
        </button>
      </li>
      <li
        className="header__menu-item"
      >
        <button
          className="header__menu-button"
          onClick={[Function]}
        >
          Signup
        </button>
      </li>
    </ul>
  </nav>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="header__modal"
    closeTimeoutMS={0}
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName="header__modal-overlay"
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <div
      className="header__close-button-container"
    >
      <button
        className="header__close-button"
        onClick={[Function]}
      >
        ✕
      </button>
    </div>
    <Signup />
  </Modal>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className="header__modal"
    closeTimeoutMS={0}
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName="header__modal-overlay"
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    role="dialog"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <div
      className="header__close-button-container"
    >
      <button
        className="header__close-button"
        onClick={[Function]}
      >
        ✕
      </button>
    </div>
    <Signin />
  </Modal>
</header>
`;
